framec_tests/language_specific/python/v3_systems/positive/simple_interface.frm
@target python

system S {
    machine:
        $A => $P {
            ev() {
                => $^
            }
        }
        $P { }
}
