framec_tests/language_specific/python/v3_systems/negative/interface_missing_brace.frm
@target python

system S {
    interface:
        ev()  # missing '{' after header
    machine:
        $A { e() { x() } }
}

